@@ -1,4 +1,4 @@
-.TH SG3_UTILS "8" "February 2016" "sg3_utils\-1.43" SG3_UTILS
+.TH SG3_UTILS "8" "March 2016" "sg3_utils\-1.43" SG3_UTILS
 .SH NAME
 sg3_utils \- a package of utilities for sending SCSI commands
 .SH SYNOPSIS
@@ -395,7 +395,7 @@ of the \fI\-\-raw\fR option is "flipped" when used with \fI\-\-in=FN\fR to
 act on the input, typically it acts on the output data.
 .br
 Since the structure of the data returned by SCSI commands varies
-considerably then the usage information or manpage of the utility being
+considerably then the usage information or the manpage of the utility being
 used should be checked. In some cases \fI\-\-hex\fR may need to be used
 multiple times (and is more conveniently given as '\-HH' or '\-HHH). In
 other cases the name of this option is \fI\-\-inhex=FN\fR.
