@@ -1793,7 +1793,8 @@ static struct op_code2sa_t op_code2sa_arr[] = {
      "Persistent reserve out"},
     {SG_3PARTY_COPY_OUT, -1, sg_lib_xcopy_sa_arr, NULL},
     {SG_3PARTY_COPY_IN, -1, sg_lib_rec_copy_sa_arr, NULL},
-    {SG_READ_BUFFER, -1, sg_lib_read_buff_arr, "Read buffer"},
+    {SG_READ_BUFFER, -1, sg_lib_read_buff_arr, "Read buffer(10)"},
+    {SG_READ_BUFFER_16, -1, sg_lib_read_buff_arr, "Read buffer(16)"},
     {SG_READ_ATTRIBUTE, -1, sg_lib_read_attr_arr, "Read attribute"},
     {SG_READ_POSITION, 1, sg_lib_read_pos_arr, "Read position"},
     {SG_SANITIZE, 0, sg_lib_sanitize_sa_arr, "Sanitize"},
