@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20160324] [svn: r686]
+Changelog for sg3_utils-1.43 [20160325] [svn: r687]
   - sg_senddiag: add --timeout=SEC option
   - sg_sanitize: add --timeout=SEC option
   - sg_format: add --timeout=SEC option
@@ -20,6 +20,7 @@ Changelog for sg3_utils-1.43 [20160324] [svn: r686]
   - sg_zone: fix debug cdb naming
   - sg_opcode: add '--enumerate' and '--pdt=' options
   - sg_lib: add SSC maintenance in/out sa names
+    - add read buffer(16) mode names
   - rescan-scsi-bus.sh: harden code
   - shellcheck cleanup on scripts
   - automake: add AM_PROG_AR to configure.ac
